changed PG venue image, added css to fix image size issues on mobile

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -465,4 +465,5 @@ footer .footer-below {
 .center {
     display: block;
     margin: 0px auto;
+    max-width: 100%;
 }
